<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/large_margin">

    <!-- Logo Text -->
    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_logo"
        style="@style/LogoText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Red Dot -->
    <View
        android:id="@+id/view_dot"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:background="@drawable/red_dot"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@id/tv_logo"
        app:layout_constraintTop_toTopOf="@id/tv_logo"
        app:layout_constraintBottom_toBottomOf="@id/tv_logo" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        style="@style/SubtitleText"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/PrimaryButton"
        android:layout_marginTop="@dimen/button_spacing"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_continue_guest" />

    <!-- Continue as Guest Button -->
    <Button
        android:id="@+id/btn_continue_guest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_as_guest"
        style="@style/SecondaryButton"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>