<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/large_margin">

        <!-- Header Section -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_title"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/black"
            android:fontFamily="@font/darker_grotesque_bold"
            android:layout_marginTop="@dimen/extra_large_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_subtitle"
            style="@style/SubtitleText"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Form Section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_marginTop="@dimen/form_spacing"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_sans_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/til_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="128"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_sans_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Sign In Button -->
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/PrimaryButton"
            android:enabled="false"
            android:layout_marginTop="@dimen/button_spacing"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/btn_sign_in"
            app:layout_constraintBottom_toBottomOf="@id/btn_sign_in"
            app:layout_constraintStart_toStartOf="@id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_in" />

        <!-- Footer Section -->
        <LinearLayout
            android:id="@+id/ll_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/button_spacing"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/black"
                android:fontFamily="@font/noto_sans_regular" />

            <TextView
                android:id="@+id/tv_sign_up_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_link"
                android:textColor="@color/red"
                android:fontFamily="@font/noto_sans_regular"
                android:layout_marginStart="4dp"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_sans_regular"
            android:layout_marginTop="@dimen/default_margin"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/ll_footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>